test/libsolidity/syntaxTests/nameAndTypeResolution/571_function_type_undeclared_type_external.sol
contract C {
    function a(function(Nested) external) external pure {}
}
// ----
// DeclarationError: (37-43): Identifier not found or not unique.
